--- a/templates/game.html
+++ b/templates/game.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/static/madlibs.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's play a game!</title>
 </head>
 <body>
-    <form action="/madlib">
-        <!-- ask for person, colour, noun, adjective -->
-        <label>Enter a name: </label>
-        <input type="text" name="name">
-        <br>
-        
-        Please pick a colour
-        <select name="colour">
-            <option value="red">red</option>
-            <option value="blue">blue</option>
-            <option value="green">green</option>
-        </select><br>
+    <div>
+        <form action="/madlib">
+            <!-- ask for person, colour, noun, adjective -->
+            <label>Enter a name: </label>
+            <input type="text" name="name">
+            <br>
+            
+            Please pick a colour
+            <select name="colour">
+                <option value="red">red</option>
+                <option value="blue">blue</option>
+                <option value="green">green</option>
+            </select><br>
 
-        <label>Enter a noun: </label>
-        <input type="text" name="noun"><br>
+            <label>Enter a noun: </label>
+            <input type="text" name="noun"><br>
 
-        Pick an adjective: 
-        <input type="radio" name="adj" value="shiny">
-        <label>shiny</label>
-        <input type="radio" name="adj" value="hairy">
-        <label>hairy</label>
-        <input type="radio" name="adj" value="bright">
-        <label>bright</label>
-        <input type="radio" name="adj" value="smooth">
-        <label>smooth</label><br>
+            Pick an adjective: 
+            <input type="radio" name="adj" value="shiny">
+            <label>shiny</label>
+            <input type="radio" name="adj" value="hairy">
+            <label>hairy</label>
+            <input type="radio" name="adj" value="bright">
+            <label>bright</label>
+            <input type="radio" name="adj" value="smooth">
+            <label>smooth</label><br>
 
-        <input type="submit">
-    </form>
+            <input type="submit">
+        </form>
+    </div>
 </body>
 </html>
